Auto create docker environment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
+# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
 Django == 3.2.3
 gunicorn == 20.1.0
+
